syntax = "proto3";
package heph.plugin.v1;
import "heph/plugin/v1/tref.proto";

message TargetMatchers {
  repeated TargetMatcher items = 1;
}

message TargetMatcher {
  oneof item {
    TargetRef ref = 1;
    string package = 2;
    string package_prefix = 3;
    string label = 4;
    TargetMatchers or = 5;
    TargetMatchers and = 6;
    TargetMatcher not = 7;
  }
}
